Fix Tooltip overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -186,7 +186,7 @@ html {
   border-radius: 6px;
 
   position: absolute;
-  z-index: 1;
+  z-index: 10;
   bottom: calc(100% + 10px);
   left: 50%;
   margin-left: -60px;
@@ -198,11 +198,13 @@ html {
 
 .tooltip-container:hover {
   cursor: pointer;
+  z-index: 10;
 }
 
 .tooltip-container:hover .tooltip-text {
   visibility: visible;
   opacity: 1;
+  z-index: 10;
 }
 
 /* StatusIndicator styles */
